fix hamburger alignment

--- a/assets/sass/atoms/_hamburger.scss
+++ b/assets/sass/atoms/_hamburger.scss
@@ -43,7 +43,7 @@
     width: 32px;
     height: 32px;
     margin-top: -15px;
-    margin-left: -12px;
+    margin-left: -13px;
 
     span {
       display: block;
